[metadata]
name = treadmillio_sound_server
description = ZMQ-based server which presents sound stimuli as controlled by a treadmillio system
version = 0.0.4
license = MIT License

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    zmq
    setproctitle
    numpy
    pyalsaaudio

[options.entry_points]
console_scripts =
    treadmillio-start-sound-server = treadmillio_sound_server.networksound:start_server


